# darling-compiler-rt

lib/BlocksRuntime/: CMakeLists.txt
lib/builtins/: CMakeLists.txt
